auto-test/tests/chapter_14/invalid_declarations/extra_credit/addr_of_label.c

int main(void) {
    int x = 0;
    lbl:
    x = 1;
    if (&lbl == 0) {
        return 1;
    }
    goto lbl;
    return 0;

}